fix mobile overflow

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,7 +5,9 @@
     box-sizing: border-box;
     // touch-action: none;
 }
-
+:root {
+    --doc-height: 100%;
+}
 
 // .scrollLeftLoc{
 //     z-index: 99;
@@ -17,11 +19,13 @@ html,
 body {
     max-height:100vh;
     min-height:100vh;
+    height: var(--doc-height);
 }
 .swipeArea{
     visibility: hidden;
     z-index: 99;
     height: 100vh;
+    height: var(--doc-height);
     width: 20vw;
     background-color: white;
     border-radius: 5%;
@@ -99,6 +103,7 @@ $totalWidth:10500px;
         bottom: 0;
         max-height: 100vh;
         height: 100vh;
+        height: var(--doc-height);
         overflow: scroll;
         background-repeat: repeat-x;
         background-attachment: local;
@@ -147,6 +152,7 @@ $totalWidth:10500px;
         position: fixed;
         width: 100vw;
         height: 100vh;
+        height: var(--doc-height);
         background-size: auto 70vh;
         z-index: 1;
     }
@@ -161,6 +167,7 @@ $totalWidth:10500px;
         position: fixed;
         background-size: 50vw 30vh;
         height: 100vh;
+        height: var(--doc-height);
         width: 200vw;
         top: 0vh;
         z-index: 6;
