--- a/scss/mediaQ.scss
+++ b/scss/mediaQ.scss
@@ -1,6 +1,7 @@
 .portraitMode{
     display: none;
     height: 100vh;
+    height: var(--doc-height);
     h1{
         margin-top: 50%;
     }
