--- a/scss/texts.scss
+++ b/scss/texts.scss
@@ -16,6 +16,7 @@
             .welcome{
                 width: 100vw;
                 height: 100vh;
+                height: var(--doc-height);
                 display: grid;
                 gap: 0;
                 justify-content: center;
@@ -51,6 +52,7 @@
                 left: calc(100vw + 500px) ;
                 width: 100vw;
                 height: 100vh;
+                height: var(--doc-height);
                 display: grid;
                 justify-content: center;
                 align-items: center;
@@ -115,6 +117,7 @@
         z-index: 40;
         .projects{
             height: 100vh;
+            height: var(--doc-height);
 
             .billboard{
                 top: 20vh;
